word count example and other updates